<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?attr/bgColor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:background="?attr/barColor"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/inBagTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_overview_button_navigation"
        android:textColor="?attr/textColor"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar" />

    <TableLayout
        android:id="@+id/Table"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow android:background="@drawable/borders">

            <TextView
                android:textColor="?attr/textColor"
                android:layout_height="66dp"
                android:gravity="center"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/mondayShort"
                android:textSize="18sp" />
        </TableRow>

        <TableRow android:background="@drawable/borders">

            <TextView
                android:textColor="?attr/textColor"
                android:layout_height="66dp"
                android:gravity="center"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/tuesdayShort"
                android:textSize="18sp" />
        </TableRow>

        <TableRow android:background="@drawable/borders">

            <TextView
                android:textColor="?attr/textColor"
                android:layout_height="66dp"
                android:gravity="center"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/wednesdayShort"
                android:textSize="18sp" />
        </TableRow>

        <TableRow android:background="@drawable/borders">

            <TextView
                android:textColor="?attr/textColor"
                android:layout_height="66dp"
                android:gravity="center"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/thursdayShort"
                android:textSize="18sp" />
        </TableRow>

        <TableRow android:background="@drawable/borders">

            <TextView
                android:textColor="?attr/textColor"
                android:layout_height="66dp"
                android:gravity="center"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/fridayShort"
                android:textSize="18sp" />
        </TableRow>

        <TableRow android:background="@drawable/borders">

            <TextView
                android:textColor="?attr/textColor"
                android:layout_height="66dp"
                android:gravity="center"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/saturdayShort"
                android:textSize="18sp" />
        </TableRow>

        <TableRow android:background="@drawable/borders">

            <TextView
                android:textColor="?attr/textColor"
                android:layout_height="66dp"
                android:gravity="center"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/sundayShort"
                android:textSize="18sp" />
        </TableRow>
    </TableLayout>


    <HorizontalScrollView
        android:textColor="?attr/textColor"
        android:id="@+id/horizontalView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scrollbars="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Table"
        app:layout_constraintTop_toTopOf="@+id/Table">


        <TableLayout
            android:id="@+id/mainTable"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">


        </TableLayout>
    </HorizontalScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>